# ml_systems

./: README.md
.github/: tests.yml
.github/workflows/: tests.yml
final_project/: .gitignore  README.md
final_project/.k8s/bases/: deployment-project.yaml  kustomization.yaml
final_project/.k8s/overlays/dev/: kustomization.yaml  patch-deployment-lab4.yaml  patch-deployment-project.yaml
final_project/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-lab4.yaml  patch-deployment-lab4_copy.yaml  patch-deployment-project.yaml  patch-deployment-project_copy.yaml  virtual-service.yaml
final_project/finalproject/: Dockerfile  README.md  build-push.sh  findings.md  load.js  pyproject.toml
final_project/finalproject/finalproject/: main.py
final_project/finalproject/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-prediction.yaml  service-redis.yaml
final_project/finalproject/tests/: test_mlapi.py
lab_1/: README.md  run.sh
lab_1/lab1/: pyproject.toml
lab_1/lab_1/: Dockerfile
lab_1/lab_1/src/: main.py
lab_1/src/: main.py
lab_1/tests/: test_src.py
lab_2/: pyproject.toml  run.sh
lab_2/lab2/: Dockerfile  README.md  pyproject.toml
lab_2/lab2/src/: main.py  main1.py  main2.py
lab_2/lab2/tests/: test_lab2.py
lab_2/src/: main.py
lab_2/trainer/: train.py
lab_3/: run.sh
lab_3/lab3/: Dockerfile  README.md  pyproject.toml
lab_3/lab3/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-prediction.yaml  service-redis.yaml
lab_3/lab3/lab3/: main.py
lab_3/lab3/tests/: dump.rdb  test_lab3.py
lab_4/.k8s/overlays/prod/: kustomization.yaml  virtual-service.yaml
lab_4/lab4/: Dockerfile  README.md  build-push.sh  docker_run.sh
lab_4/lab4/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-prediction.yaml  service-redis.yaml
lab_4/lab4/tests/: dump.rdb  test_lab4.py
lab_5/: Findings.md  README.md  load.js
