[tool.poetry]
name = "final_project"
version = "0.1.0"
description = ""
authors = ["Arun Surendranath <arun.nath011@berkeley.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
transformers = "^4.23.1"
torch = [
  {url = "https://download.pytorch.org/whl/cpu/torch-1.12.1-cp310-none-macosx_10_9_x86_64.whl", "platform" = "darwin" , markers = "platform_machine == 'x86_64'" },
  ]
scipy = "^1.10"
scikit-learn = "1.0.2"
datasets = "^2.10.1"
requests = "^2.28"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.9"}
fastapi = "^0.95"
uvicorn = "^0.21"
redis ="4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7"
isort = "^5"
black = "^23"
pre-commit = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

