[tool.poetry]
name = "lab-1"
version = "0.1.0"
description = ""
authors = ["reynard011 <53822804+reynard011@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lab_1"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.89.1"
requests = "^2.25.0"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
httpx = "^0.16.0"
isort = "^5.6.4"
black = "^22.6.0"
pytest = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
