[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["reynard011 <53822804+reynard011@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
requests = "^2.28.2"
joblib = "^1.2.0"
scipy = "^1.10"
scikit-learn = "1.0.2"
redis ="4.5.1"


[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = "^23.1.0"
isort = "^5.12.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"